finalizando openapi.yml
